fix youtube video z-index while playing

--- a/apps/pinpoint/static/pinpoint/backbonejs/css/pages2.css
+++ b/apps/pinpoint/static/pinpoint/backbonejs/css/pages2.css
@@ -371,6 +371,7 @@ div.loading {
 
 .previewContainer .content .social-buttons {
     display: block;  /* these, however, show by default */
+    clear: both;
 }
 
 .shareContainer .content {
